[package]
name = "blog_os"
version = "0.1.0"
authors = ["YUJI takahashi <jit.y.31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.4"
spin = "0.5.2"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
