[package]
name = "blog_os"
version = "0.1.0"
authors = ["YUJI takahashi <jit.y.31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.4"
spin = "0.5.2"
volatile = "0.2.6"
uart_16550 = "0.2.0"
x86_64 = "0.11.0"

[dependencies.lazy_static]
version = "1.0.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
# (0x10 << 1) | 1 = 0b100001
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false
